[package]
name = "reconcile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
csv = "1.1"
serde = "1.0"
serde_json = "1.0"

# polars-core = "0.22.7"
# polars-io = "0.22.7"

