[package]
name = "reconcile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
csv = "1.1"
fuzzywuzzy = "0.0.2"
indexmap = "1.9.2"
lazy_static = "1.4.0"
pluralizer = "0.3.2"
polars = { version = "0.25.1", features = ["lazy"] }
regex = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
